Fixed line breaks in the talks page by adding css magic white-space directive.

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -730,7 +730,8 @@ section#talks h3 {
   font-size: 40px; }
 
 section#talks p {
-  text-align: left; }
+  text-align: left;
+  white-space: pre-wrap; }
 
 a.sneaky-anchor {
   display: block;
