--- a/scss/_talks.scss
+++ b/scss/_talks.scss
@@ -15,6 +15,7 @@ section#talks {
     }
     p {
         text-align: left;
+        white-space: pre-wrap;
     }
 }
 
